# duckdb_async

./: .gitignore  Cargo.toml  README.md  pyproject.toml
exmples/: sample.py
src/: lib.rs
src/db/: async_duckdb.rs
src/duckdb_async/: __init__.py
