[package]
name = "duckdb_async"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.1.1", features = ["bundled"] }
polars = { version = "0.45.1", features = ["lazy"] }
pyo3 = "=0.20.3"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
